@@ -1,3 +1,15 @@
+Fri Nov 15 14:43:44 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
+
+	* fshelp.h (fshelp_access): Uh, shift bits the right direction.
+
+Tue Nov 12 22:07:41 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
+
+	* fetch-root.c (fshelp_fetch_root): Name idvec members correctly. 
+	
+	* fshelp.h: <iohelp.h> -> <hurd/iohelp.h>.
+	Include <sys/stat.h>.
+	(fshelp_access): Declare `gotit'.
+	
 Wed Nov  6 17:49:33 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
 
 	* fshelp.h (fshelp_fetch_root): Delete args `uids', `gids',
